--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tech2 tutorial</title>
+    <title>Honey wellness and beauty secrets</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
@@ -148,7 +148,7 @@
                 </div>
 
                 <div class="copyright">
-                    <p>copyright @2021 All rights reserved | This template is made by Tech2etc </p>
+                    <p>copyright @2025 All rights reserved | This template is made by Badun Tobi </p>
                     <div class="pro-links">
                             <i class="fab fa-facebook"></i>
                             <i class="fab fa-instagram"></i>
