--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tech2 tutorial</title>
+    <title>Honey wellness and beauty secrets</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
@@ -20,7 +20,7 @@
                 <li><a  href="index.html">home</a></li>
                 <li><a href="about.html">about</a></li>
                 <li><a class="active" href="blog.html">blog</a></li>
-                <li><a href="course.html">product</a></li>
+                <li><a href="product.html">product</a></li>
                 <li><a href="contact.html">contact</a></li>
             </ul>
             
