--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div class="nav-logo">
-            <img  src="imagesedu/pngwing.com (4).png" alt="">
+            <img  src="./imagesedu/pngwing.com (4).png" alt="">
         <h1>Honey wellness & beauty secrets </h1>
         </div>
         
@@ -27,11 +27,11 @@
             
         </div>
     </nav>
-    <img id="menu-btn"  src="imagesedu/menu.png" alt="">
+    <img id="menu-btn"  src="./imagesedu/menu.png" alt="">
 
     <div class="mobile-nav">
         <ul>
-            <img id="menu-close" class="menu" src="imagesedu/pngwing.com (11).png" alt="">
+            <img id="menu-close" class="menu" src="./imagesedu/pngwing.com (11).png" alt="">
             <li><a class="active" href="index.html">home</a></li>
                 <li><a href="about.html">about</a></li>
                 <li><a href="blog.html">blog</a></li>
@@ -83,7 +83,7 @@
             <p>Replenish man have thing gatthering lights yielding shall you</p>
             <div class="course-box">
                 <div class="courses">
-                    <img src="imagesedu/pngwing.com.png" alt="">
+                    <img src="./imagesedu/pngwing.com.png" alt="">
                     <div class="details">
                         <span>Updated 21/8/21</span>
                         <h6>Natural Skincare Creams</h6>
@@ -101,7 +101,7 @@
                     </div>
                 </div>
                 <div class="courses">
-                    <img src="imagesedu/pngwing.com (1).png" alt="">
+                    <img src="./imagesedu/pngwing.com (1).png" alt="">
                     <div class="details">
                         <span>Updated 21/8/21</span>
                         <h6>Skin Touches And More</h6>
@@ -119,7 +119,7 @@
                     </div>
                 </div>
                 <div class="courses">
-                    <img src="imagesedu/pngwing.com (3).png" alt="">
+                    <img src="./imagesedu/pngwing.com (3).png" alt="">
                     <div class="details">
                         <span>Updated 21/8/21</span>
                         <h6>Beauty looks</h6>
@@ -137,7 +137,7 @@
                     </div>
                 </div>
                 <div class="courses">
-                    <img src="imagesedu/pngwing.com (7).png" alt="">
+                    <img src="./imagesedu/pngwing.com (7).png" alt="">
                     <div class="details">
                         <span>Updated 21/8/21</span>
                         <h6>Javascript Beginners Course</h6>
@@ -155,7 +155,7 @@
                     </div>
                 </div>
                 <div class="courses">
-                    <img src="imagesedu/pngwing.com (7).png" alt="">
+                    <img src="./imagesedu/pngwing.com (7).png" alt="">
                     <div class="details">
                         <span>Updated 21/8/21</span>
                         <h6>Javascript Beginners Course</h6>
@@ -173,7 +173,7 @@
                     </div>
                 </div>
                 <div class="courses">
-                    <img src="imagesedu/pngwing.com (9).png" alt="">
+                    <img src="./imagesedu/pngwing.com (9).png" alt="">
                     <div class="details">
                         <span>Updated 21/8/21</span>
                         <h6>Javascript Beginners Course</h6>
@@ -227,11 +227,11 @@
         <!-- profiles -->
 
         <section id="experts">
-                <h1>Community Experts</h1>
+                <h1>Our Experts Members</h1>
                 <p>Replenish man have thing gatthering lights yielding shall you</p>
                 <div class="expert-box">
                     <div class="profile">
-                        <img src="imagesedu/pro1.webp" alt="">
+                        <img src="./imagesedu/pro1.webp" alt="">
                         <span><p>Ernik grt</p></span>
                         <p>Python & Algorithms Expert</p>
                         <div class="pro-links">
@@ -241,7 +241,7 @@
                         </div>
                     </div>
                     <div class="profile">
-                        <img src="imagesedu/pro2.webp" alt="">
+                        <img src="./imagesedu/pro2.webp" alt="">
                         <span><p>Ernik grt</p></span>
                         <p>Python & Algorithms Expert</p>
                         <div class="pro-links">
@@ -251,7 +251,7 @@
                         </div>
                     </div>
                     <div class="profile">
-                        <img src="imagesedu/pro3.webp" alt="">
+                        <img src="./imagesedu/pro3.webp" alt="">
                         <span><p>Ernik grt</p></span>
                         <p>Python & Algorithms Expert</p>
                         <div class="pro-links">
@@ -261,7 +261,7 @@
                         </div>
                     </div>
                     <div class="profile">
-                        <img src="imagesedu/pro4.webp" alt="">
+                        <img src="./imagesedu/pro4.webp" alt="">
                         <span><p>Ernik grt</p></span>
                         <p>Python & Algorithms Expert</p>
                         <div class="pro-links">
