--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div class="nav-logo">
-            <img  src="imagesedu/pngwing.com (4).png" alt="">
+            <img  src="./imagesedu/pngwing.com (4).png" alt="">
         <h1>Honey wellness & beauty secrets </h1>
         </div>
         <div class="navigation">
@@ -26,11 +26,11 @@
             
         </div>
     </nav>
-    <img id="menu-btn"  src="imagesedu/menu.png" alt="">
+    <img id="menu-btn"  src="./imagesedu/menu.png" alt="">
 
     <div class="mobile-nav">
         <ul>
-            <img id="menu-close" class="menu" src="imagesedu/pngwing.com (11).png" alt="">
+            <img id="menu-close" class="menu" src="./imagesedu/pngwing.com (11).png" alt="">
             <li><a href="index.html">home</a></li>
                 <li><a class="active" href="about.html">about</a></li>
                 <li><a href="blog.html">blog</a></li>
@@ -46,20 +46,20 @@
     </section>
     <section id="about-container">
         <div class="about-img">
-            <img src="imagesedu/pngwing.com (2).png" alt="">
+            <img src="./imagesedu/pngwing.com (2).png" alt="">
         </div>
         <div class="about-text">
             <h2>Hi, I am Oyindamola, <br> A Health and Beauty Coach <br> I Offer a Range of Products That Enchance Your Natural Beauty While Caring For The Planet</h2>
             <p>Our products are naturally sourced <br> I built a team of your entrpreneurs to help achieve financial independencies <br> check out the products below.. purchase with us <br> with Honey wellness beauty secrets
                 <div class="about-fe">
-                    <img src="imagesedu/fe1.png" alt="">
+                    <img src="./imagesedu/fe1.png" alt="">
                     <div class="fe-text">
                         <h2>4+ product</h2>
                         <p>Lorem ipsum dolor sit amet. <br> Lorem ipsum dolor sit amet consectetur. </p>
                     </div>
                 </div> 
                 <div class="about-fe">
-                    <img src="imagesedu/fe2.png" alt="">
+                    <img src="./imagesedu/fe2.png" alt="">
                     <div class="fe-text">
                         <h2>4+ product</h2>
                         <p>Lorem ipsum dolor sit amet. <br> Lorem ipsum dolor sit amet consectetur. </p>
@@ -97,11 +97,11 @@
 <h1>Trusted By</h1>
 <p>Replenish man have thing gatthering lights yielding shall you</p>
 <div class="trust-img">
-    <img src="imagesedu/trust (1).png" alt="">
-    <img src="imagesedu/trust (2).png" alt="">
-    <img src="imagesedu/trust (3).png" alt="">
-    <img src="imagesedu/trust (4).png" alt="">
-    <img src="imagesedu/trust (5).png" alt="">
+    <img src="./imagesedu/trust (1).png" alt="">
+    <img src="./imagesedu/trust (2).png" alt="">
+    <img src="./imagesedu/trust (3).png" alt="">
+    <img src="./imagesedu/trust (4).png" alt="">
+    <img src="./imagesedu/trust (5).png" alt="">
 </div>   
 </section>
 
