--- a/product.html
+++ b/product.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div class="nav-logo">
-            <img  src="imagesedu/pngwing.com (4).png" alt="">
+            <img  src="./imagesedu/pngwing.com (4).png" alt="">
         <h1>Honey wellness & beauty secrets </h1>
         </div>        <div class="navigation">
             <ul>
@@ -25,11 +25,11 @@
             
         </div>
     </nav>
-    <img id="menu-btn"  src="imagesedu/menu.png" alt="">
+    <img id="menu-btn"  src="./imagesedu/menu.png" alt="">
 
     <div class="mobile-nav">
         <ul>
-            <img id="menu-close" class="menu" src="imagesedu/pngwing.com (11).png" alt="">
+            <img id="menu-close" class="menu" src="./imagesedu/pngwing.com (11).png" alt="">
             <li><a href="index.html">home</a></li>
                 <li><a href="about.html">about</a></li>
                 <li><a  href="blog.html">blog</a></li>
@@ -49,7 +49,7 @@
             <p>Replenish man have thing gatthering lights yielding shall you</p>
         <div class="course-box">
             <div onclick="window.location.href='course-inner.html'" class="courses">
-                <img src="imagesedu/pngwing.com (1).png" alt="">
+                <img src="./imagesedu/pngwing.com (1).png" alt="">
                 <div class="details">
                     <span>Updated 21/8/21</span>
                         <h6>Natural Skincare Creams</h6>
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="courses">
-                <img src="imagesedu/pngwing.com.png" alt="">
+                <img src="./imagesedu/pngwing.com.png" alt="">
                 <div class="details">
                     <span>Updated 21/8/21</span>
                         <h6>Natural Skincare Creams</h6>
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="courses">
-                <img src="imagesedu/pngwing.com (7).png" alt="">
+                <img src="./imagesedu/pngwing.com (7).png" alt="">
                 <div class="details">
                     <span>Updated 21/8/21</span>
                         <h6>Natural Skincare Creams</h6>
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div class="courses">
-                <img src="imagesedu/pngwing.com (9).png" alt="">
+                <img src="./imagesedu/pngwing.com (9).png" alt="">
                 <div class="details">
                     <span>Updated 21/8/21</span>
                         <h6>Natural Skincare Creams</h6>
@@ -121,7 +121,7 @@
                 </div>
             </div>
             <div class="courses">
-                <img src="imagesedu/pngwing.com.png" alt="">
+                <img src="./imagesedu/pngwing.com.png" alt="">
                 <div class="details">
                     <span>Updated 21/8/21</span>
                         <h6>Natural Skincare Creams</h6>
@@ -139,7 +139,7 @@
                 </div>
             </div>
             <div class="courses">
-                <img src="imagesedu/pngwing.com (7).png" alt="">
+                <img src="./imagesedu/pngwing.com (7).png" alt="">
                 <div class="details">
                     <span>Updated 21/8/21</span>
                         <h6>Natural Skincare Creams</h6>
@@ -157,7 +157,7 @@
                 </div>
             </div>
             <div class="courses">
-                <img src="imagesedu/pngwing.com (9).png" alt="">
+                <img src="./imagesedu/pngwing.com (9).png" alt="">
                 <div class="details">
                     <span>Updated 21/8/21</span>
                         <h6>Natural Skincare Creams</h6>
@@ -175,7 +175,7 @@
                 </div>
             </div>
             <div class="courses">
-                <img src="imagesedu/pngwing.com (1).png" alt="">
+                <img src="./imagesedu/pngwing.com (1).png" alt="">
                 <div class="details">
                     <span>Updated 21/8/21</span>
                         <h6>Natural Skincare Creams</h6>
@@ -193,7 +193,7 @@
                 </div>
             </div>
             <div class="courses">
-                <img src="imagesedu/pngwing.com (7).png" alt="">
+                <img src="./imagesedu/pngwing.com (7).png" alt="">
                 <div class="details">
                     <span>Updated 21/8/21</span>
                         <h6>Natural Skincare Creams</h6>
@@ -211,7 +211,7 @@
                 </div>
             </div>
             <div class="courses">
-                <img src="imagesedu/pngwing.com (9).png" alt="">
+                <img src="./imagesedu/pngwing.com (9).png" alt="">
                 <div class="details">
                     <span>Updated 21/8/21</span>
                         <h6>Natural Skincare Creams</h6>
