--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <div class="nav-logo">
-            <img  src="imagesedu/pngwing.com (4).png" alt="">
+            <img  src="./imagesedu/pngwing.com (4).png" alt="">
         <h1>Honey wellness & beauty secrets </h1>
         </div>        <div class="navigation">
             <ul>
@@ -26,11 +26,11 @@
             
         </div>
     </nav>
-    <img id="menu-btn"  src="imagesedu/menu.png" alt="">
+    <img id="menu-btn"  src="./imagesedu/menu.png" alt="">
 
     <div class="mobile-nav">
         <ul>
-            <img id="menu-close" class="menu" src="imagesedu/pngwing.com (11).png" alt="">
+            <img id="menu-close" class="menu" src="./imagesedu/pngwing.com (11).png" alt="">
             <li><a href="index.html">home</a></li>
                 <li><a href="about.html">about</a></li>
                 <li><a  href="blog.html">blog</a></li>
